Salesforce Chatter/src/objects/Media__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is checked when Media is not available at location</inlineHelpText>
        <label>Not Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <description>This is for Book record type unique indentifier</description>
        <label>ISBN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Return_Fine__c</fullName>
        <label>Late Return Fine Per day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brach</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Media</relationshipLabel>
        <relationshipName>Media</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loss_Fine__c</fullName>
        <description>Fine amount if this media lost</description>
        <label>Loss Fine</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Number__c</fullName>
        <externalId>true</externalId>
        <label>Media Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Stores the Videos name</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <description>This will identify the Each record.</description>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Unique Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Stores the Videos year</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Media Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media</pluralLabel>
    <recordTypes>
        <fullName>Books</fullName>
        <active>true</active>
        <label>Books</label>
    </recordTypes>
    <recordTypes>
        <fullName>Videos</fullName>
        <active>true</active>
        <label>Videos</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>